--- a/react-blog-app/src/components/Style.css
+++ b/react-blog-app/src/components/Style.css
@@ -1,7 +1,7 @@
 .App {
     text-align: center;
   }
-  
+
   .nav-links{
     width:50%;
     display: flex;
@@ -9,19 +9,19 @@
     align-items: center;
     list-style: none;
   }
-  
+
   .link{
     list-style: none;
   }
-  
+
   .main{
     text-align: center;
     justify-content: center;
     display: flex;
     padding: 90px 0px 90px 0;
-    background-color: rgb(234, 52, 52);
+    background-color: rgb(252,252,252);
   }
-  
+
   .sub-main{
     display: flex;
     justify-content: center;
@@ -32,14 +32,14 @@
     border-radius: 60px;
     background-color: white;
   }
-  
+
   input{
     width: 300px;
     height: 50px;
     border-radius: 60px;
     box-shadow: inset 0px 0px 25px 0px #888;
   }
-  
+
   .imgs{
     padding-top: 20px;
     justify-content: center;
@@ -53,17 +53,17 @@
     height: 115px;
     width: 115px;  
   }
-  
+
   .profile{
     height: 130px;
     width: 130px;
     border-radius: 130px;
   }
-  
+
   .LHeader{
     text-align: center;
   }
-  
+
   .email{
     height: 25px;
     width: 35px;
@@ -72,16 +72,16 @@
     border: none;
     outline: none;
   }
-  
+
   .fill{
     padding-left: 70px;
     font-size: 20px;
   }
-  
+
   .second-input{
     padding-top: 20px;
   }
-  
+
   button{
     width: 260px;
     height: 50px;
@@ -92,24 +92,24 @@
     font-size: 25px;
     border: none;
   }
-  
+
   .login-btn{
     padding-top: 20px;
   }
-  
+
   .reg-link{
     padding-top: 10px;
   }
-  
+
   .mail-id{
     padding-top: 20px;
   }
-  
+
   .plist{
     padding-right: 10px;
     font-size: 25px;
   }
-  
+
   select {
     appearance: none;
     outline: 0;
@@ -118,7 +118,7 @@
     border: 1px solid black;
     padding-top: 200px;
   }
-  
+
   .select {
     position: relative;
     top: 10px;
@@ -131,7 +131,7 @@
     overflow: hidden;
     border-radius: .25em;
   }
-  
+
   select {
     width: 100%;
     height: 100%;
@@ -140,11 +140,11 @@
     color: #fff;
     cursor: pointer;
   }
-  
+
   select::-ms-expand {
     display: none;
   }
-  
+
   .select::after {
     content: '\25BC';
     position: absolute;
@@ -155,7 +155,7 @@
     background: #34495E;
     pointer-events: none;
   }
-  
+
   .select:hover::after {
     color: #F39C12;
   }
